@@ -1709,7 +1709,7 @@ class DocumentParser {
     }
 
     function getUserData() {
-        include_once $this->config["base_path"] . "manager/includes/extenders/getuserdata.extender.php";
+        include_once $this->config["base_path"] . "manager/includes/extenders/getUserData.extender.php";
         return $tmpArray;
     }
 
